[gd_scene load_steps=4 format=3 uid="uid://bga6bepffh26e"]

[ext_resource type="Script" uid="uid://qnu2115j6wt2" path="res://Scenes/Levels/level.gd" id="1_pq1v6"]
[ext_resource type="PackedScene" uid="uid://16fpuwrsv6j8" path="res://Scenes/UI/ui.tscn" id="2_yqiyc"]
[ext_resource type="Script" uid="uid://dqtcofl25bsdv" path="res://Scripts/wave_spawner.gd" id="3_jhlw4"]

[node name="Level_Template" type="Node2D"]
script = ExtResource("1_pq1v6")

[node name="ui" parent="." instance=ExtResource("2_yqiyc")]

[node name="Timers" type="Node" parent="."]

[node name="BuildTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="BackgroundSprite" type="Sprite2D" parent="."]
metadata/_edit_lock_ = true

[node name="BuildableArea" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BuildableArea"]

[node name="Towers" type="Node" parent="."]

[node name="Projectiles" type="Node" parent="."]

[node name="Enemies" type="Path2D" parent="."]
script = ExtResource("3_jhlw4")

[connection signal="twr_btn_pressed" from="ui" to="." method="_on_ui_twr_btn_pressed"]
[connection signal="timeout" from="Timers/BuildTimer" to="." method="_on_build_timer_timeout"]
[connection signal="wave_complete" from="Enemies" to="." method="_on_enemies_wave_complete"]
